fix misaligned buttons

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -71,9 +71,6 @@ px      68    160    252    */
   #about .block {
     padding: 0;
   }
-  figure .buttons {
-    left: 16%;
-  }
   #feature .media {
     margin: 0px 0px 35px;
   }
